--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
                     </div>
                 </div>
                 <div class="hero-visual">
-                    <div class="hero-shape"></div>
+                    <div class="hero-shape">
+
+                        <img src="" alt="Salman Daher">
+                    </div>
                 </div>
             </div>
         </div>
