--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="hero-visual">
                     <div class="hero-shape">
 
-                        <img src="https://avatars.githubusercontent.com/u/143751970?v=4" alt="Salman Daher">
+                        <img src="143751970.png" alt="Salman Daher">
                     </div>
                 </div>
             </div>
