--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="hero-visual">
                     <div class="hero-shape">
-                        <img src="https://via.placeholder.com/300x300/21808D/FFFFFF?text=SD" 
+                        <img src="143751970.png?text=SD" 
                              alt="Salman Daher" 
                              onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'placeholder-avatar\'>SD</div>'">
                     </div>
