--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="hero-visual">
                     <div class="hero-shape">
-                        <img src="143751970.png?text=SD" 
+                        <img src="https://github.com/salmandaher/salmandaher.github.io/blob/main/143751970.png?text=SD" 
                              alt="Salman Daher" 
                              onerror="this.style.display='none'; this.parentElement.innerHTML='<div class=\'placeholder-avatar\'>SD</div>'">
                     </div>
