--- a/index.html
+++ b/index.html
@@ -161,146 +161,8 @@
             </div>
         </div>
     </section>
-<!-- Projects Section -->
-    <section id="projects" class="projects">
-        <div class="container">
-            <div class="section-header">
-                <h2 class="section-title">Featured Projects</h2>
-                <p class="section-subtitle">Innovative solutions in robotics and AI</p>
-            </div>
-            <div class="projects-grid">
-                <div class="project-card card">
-                    <div class="project-header">
-                        <h3>Autonomous Solid Gravity Energy Storage System</h3>
-                        <span class="project-year">2024</span>
-                    </div>
-                    <p class="project-description">
-                        Developed a stationary robotic system that accumulates kinetic energy from cars' movement 
-                        mechanically and stores it by lifting giant mass. Applied Smart Load Control on the generator 
-                        to make the system efficient.
-                    </p>
-                    <div class="project-tech">
-                        <span class="tech-tag">Robotics</span>
-                        <span class="tech-tag">Energy Systems</span>
-                        <span class="tech-tag">Control Systems</span>
-                    </div>
-                </div>
 
-                <div class="project-card card">
-                    <div class="project-header">
-                        <h3>Autonomous Agricultural Mobile Robot</h3>
-                        <span class="project-year">2024</span>
-                    </div>
-                    <p class="project-description">
-                        Developed a mobile robot with a robotic arm, and a mobile app. The robot is sustainable 
-                        and relies on green sources to generate energy and water in order to operate in desert 
-                        to participate in WRO Syria 2024.
-                    </p>
-                    <div class="project-tech">
-                        <span class="tech-tag">Mobile Robotics</span>
-                        <span class="tech-tag">Sustainable Energy</span>
-                        <span class="tech-tag">Agricultural Tech</span>
-                    </div>
-                </div>
-
-                <div class="project-card card">
-                    <div class="project-header">
-                        <h3>Self-Driving Cars Solutions</h3>
-                        <span class="project-year">2024</span>
-                    </div>
-                    <p class="project-description">
-                        Motion Planning for a Differential Robot using Cosine Switch. Path Planning for 
-                        Self-driving Cars in Smart Garages using Computer Vision.
-                    </p>
-                    <div class="project-tech">
-                        <span class="tech-tag">Computer Vision</span>
-                        <span class="tech-tag">Motion Planning</span>
-                        <span class="tech-tag">Autonomous Vehicles</span>
-                    </div>
-                </div>
-
-                <div class="project-card card">
-                    <div class="project-header">
-                        <h3>Upper-Limb Prosthetic Arm</h3>
-                        <span class="project-year">2021</span>
-                    </div>
-                    <p class="project-description">
-                        Created an EMG-controlled prosthetic arm utilizing machine learning for intuitive 
-                        control and improved user experience.
-                    </p>
-                    <div class="project-tech">
-                        <span class="tech-tag">Machine Learning</span>
-                        <span class="tech-tag">Biomedical Engineering</span>
-                        <span class="tech-tag">EMG Control</span>
-                    </div>
-                </div>
-
-                <div class="project-card card">
-                    <div class="project-header">
-                        <h3>Sentimental Analysis for Arabic Text</h3>
-                        <span class="project-year">2020</span>
-                    </div>
-                    <p class="project-description">
-                        Developed sentiment analysis software using ML and NLP to analyze Arabic texts 
-                        regarding COVID-19 measures.
-                    </p>
-                    <div class="project-tech">
-                        <span class="tech-tag">NLP</span>
-                        <span class="tech-tag">Machine Learning</span>
-                        <span class="tech-tag">Arabic Processing</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Experience Section -->
-    <section id="experience" class="experience">
-        <div class="container">
-            <div class="section-header">
-                <h2 class="section-title">Experience</h2>
-                <p class="section-subtitle">Professional journey and achievements</p>
-            </div>
-            <div class="experience-timeline">
-                <div class="timeline-item">
-                    <div class="timeline-marker"></div>
-                    <div class="timeline-content card">
-                        <div class="experience-header">
-                            <h3>UI/UX Designer</h3>
-                            <span class="company">Sookas - Dubai, UAE</span>
-                            <span class="period">Feb 2025 - Apr 2025</span>
-                        </div>
-                        <p>Designed user interfaces for multiple web and mobile applications. Developed interactive prototypes using Figma.</p>
-                    </div>
-                </div>
-
-                <div class="timeline-item">
-                    <div class="timeline-marker"></div>
-                    <div class="timeline-content card">
-                        <div class="experience-header">
-                            <h3>Robotics Lab Assistant</h3>
-                            <span class="company">National Center for Distinguished - Homs, Syria</span>
-                            <span class="period">Jan 2024 - Nov 2024</span>
-                        </div>
-                        <p>Conducted training workshops for trainers in Robotics and AI. Supported laboratory including 3D printing and electronic circuit design.</p>
-                    </div>
-                </div>
-
-                <div class="timeline-item">
-                    <div class="timeline-marker"></div>
-                    <div class="timeline-content card">
-                        <div class="experience-header">
-                            <h3>Mathematical Modeling Trainer</h3>
-                            <span class="company">National Center for Distinguished - Homs, Syria</span>
-                            <span class="period">Oct 2022 - Present</span>
-                        </div>
-                        <p>Preparing a course in mathematical modelling for 10th, 11th, 12th graders. Organizing participation of students in International Mathematical Modelling Challenge and MMT competition in Russia.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- NEW: Graphic Design Gallery Section -->
+    <!-- Graphic Design Gallery Section -->
     <section id="gallery" class="gallery-section">
         <div class="container">
             <div class="section-header">
@@ -319,7 +181,6 @@
 
             <!-- Gallery Grid -->
             <div class="gallery-grid" id="gallery-grid">
-                <!-- Large featured item -->
                 <div class="gallery-item large" data-category="branding">
                     <img src="https://via.placeholder.com/600x400/21808D/FFFFFF?text=Brand+Identity" 
                          alt="Brand Identity Design" 
@@ -330,8 +191,6 @@
                         <p>Complete Package</p>
                     </div>
                 </div>
-
-                <!-- Logo designs -->
                 <div class="gallery-item" data-category="logos">
                     <img src="https://via.placeholder.com/400x400/2E7D8A/FFFFFF?text=Logo+1" 
                          alt="Modern Logo Design" 
@@ -342,7 +201,6 @@
                         <p>Minimalist Design</p>
                     </div>
                 </div>
-
                 <div class="gallery-item" data-category="logos">
                     <img src="https://via.placeholder.com/400x400/1B6B73/FFFFFF?text=Logo+2" 
                          alt="Creative Logo Design" 
@@ -353,8 +211,6 @@
                         <p>Agency Branding</p>
                     </div>
                 </div>
-
-                <!-- Print designs -->
                 <div class="gallery-item wide" data-category="print">
                     <img src="https://via.placeholder.com/800x400/155E63/FFFFFF?text=Brochure+Design" 
                          alt="Brochure Design" 
@@ -365,8 +221,6 @@
                         <p>Corporate Identity</p>
                     </div>
                 </div>
-
-                <!-- Digital designs -->
                 <div class="gallery-item" data-category="digital">
                     <img src="https://via.placeholder.com/400x500/0E4A52/FFFFFF?text=Mobile+App+UI" 
                          alt="Mobile App UI" 
@@ -377,7 +231,6 @@
                         <p>App Design</p>
                     </div>
                 </div>
-
                 <div class="gallery-item" data-category="digital">
                     <img src="https://via.placeholder.com/400x400/134852/FFFFFF?text=Web+Design" 
                          alt="Web Design" 
@@ -388,8 +241,6 @@
                         <p>Responsive Layout</p>
                     </div>
                 </div>
-
-                <!-- More items -->
                 <div class="gallery-item tall" data-category="branding">
                     <img src="https://via.placeholder.com/400x600/1A5A63/FFFFFF?text=Brand+Guidelines" 
                          alt="Brand Guidelines" 
@@ -400,7 +251,6 @@
                         <p>Style Documentation</p>
                     </div>
                 </div>
-
                 <div class="gallery-item" data-category="print">
                     <img src="https://via.placeholder.com/400x400/216D77/FFFFFF?text=Poster+Design" 
                          alt="Poster Design" 
@@ -431,120 +281,8 @@
         </div>
     </div>
 
-      <!-- Achievements Section -->
-    <section id="achievements" class="achievements">
-        <div class="container">
-            <div class="section-header">
-                <h2 class="section-title">Achievements & Recognition</h2>
-                <p class="section-subtitle">Awards and accomplishments</p>
-            </div>
-            <div class="achievements-grid">
-                <div class="achievement-card card">
-                    <div class="achievement-icon">🏆</div>
-                    <h3>First Place at WRO Syria</h3>
-                    <p>National WRO Competition (Future Innovators), Selected as Syrian international team</p>
-                    <span class="achievement-year">2024</span>
-                </div>
-
-                <div class="achievement-card card">
-                    <div class="achievement-icon">🌍</div>
-                    <h3>16th Place Worldwide at WRO Panama</h3>
-                    <p>Team member in Future Engineers Category</p>
-                    <span class="achievement-year">2023</span>
-                </div>
-
-                <div class="achievement-card card">
-                    <div class="achievement-icon">🥈</div>
-                    <h3>Silver Medal in Mathematical Modelling</h3>
-                    <p>Senior coach for NCD students at MMT by Moscow Kolmogorov High School</p>
-                    <span class="achievement-year">2023</span>
-                </div>
-
-                <div class="achievement-card card">
-                    <div class="achievement-icon">🥉</div>
-                    <h3>Bronze Medal in Mathematical Modelling</h3>
-                    <p>Senior coach for NCD students at MMT by Moscow Kolmogorov High School</p>
-                    <span class="achievement-year">2022</span>
-                </div>
-
-                <div class="achievement-card card">
-                    <div class="achievement-icon">🎯</div>
-                    <h3>International Mathematical Modeling Challenge</h3>
-                    <p>Participation at International Mathematical Modeling Challenge - Syrian team</p>
-                    <span class="achievement-year">2021</span>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="contact">
-        <div class="container">
-            <div class="section-header">
-                <h2 class="section-title">Get In Touch</h2>
-                <p class="section-subtitle">Let's work together on innovative projects</p>
-            </div>
-            <div class="contact-content">
-                <div class="contact-info">
-                    <div class="contact-item">
-                        <div class="contact-icon">📧</div>
-                        <div class="contact-details">
-                            <h4>Email</h4>
-                            <a href="mailto:salmandaher121@gmail.com">salmandaher121@gmail.com</a>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon">📱</div>
-                        <div class="contact-details">
-                            <h4>Phone</h4>
-                            <a href="tel:00963967877898">+963 967877898</a>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon">📍</div>
-                        <div class="contact-details">
-                            <h4>Location</h4>
-                            <span>Latakia, Syria</span>
-                        </div>
-                    </div>
-                </div>
-                <form class="contact-form card" id="contact-form">
-                    <div class="form-group">
-                        <label for="name" class="form-label">Name</label>
-                        <input type="text" id="name" class="form-control" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="email" id="email" class="form-control" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="subject" class="form-label">Subject</label>
-                        <input type="text" id="subject" class="form-control" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message" class="form-label">Message</label>
-                        <textarea id="message" class="form-control" rows="5" required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn--primary btn--full-width">Send Message</button>
-                </form>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-text">
-                    <p>&copy; 2025 Salman Daher. All rights reserved.</p>
-                </div>
-                <div class="footer-links">
-                    <a href="https://linkedin.com/in/salman-daher" target="_blank">LinkedIn</a>
-                    <a href="https://github.com/salman-daher" target="_blank">GitHub</a>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <!-- Placeholder for other sections: Projects, Experience, Achievements, Contact, Footer -->
+    <!-- Add your other sections here as needed -->
 
     <script src="app.js"></script>
 </body>
