--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                     </div>
                 </div>
                 <div class="gallery-item wide" data-category="print">
-                    <img src="https://ik.imagekit.io/vcvnivu1e/image.png?updatedAt=1751412847813?text=Brochure+Design" 
+                    <img src="https://ik.imagekit.io/vcvnivu1e/image.png?updatedAt=1751412847813" 
                          alt="Brochure Design" 
                          data-title="Corporate Brochure"
                          data-description="Professional tri-fold brochure design for corporate clients.">
