--- a/index.html
+++ b/index.html
@@ -350,17 +350,17 @@
                     </div>
                 </div>
                 <div class="gallery-item wide" data-category="print">
-                    <img src="https://ik.imagekit.io/vcvnivu1e/image.png?updatedAt=1751412847813" 
-                         alt="Brochure Design" 
+                    <img src="https://ik.imagekit.io/vcvnivu1e/Instagram%20post%20-%201.png?updatedAt=1751413147480" 
+                         alt="Social Media Design" 
                          data-title="Corporate Brochure"
-                         data-description="Professional tri-fold brochure design for corporate clients.">
+                         data-description="Professional Social Media Images.">
                     <div class="item-overlay">
-                        <h3>Brochure Design</h3>
+                        <h3>Social Media Design</h3>
                         <p>Corporate Identity</p>
                     </div>
                 </div>
                 <div class="gallery-item" data-category="digital">
-                    <img src="https://via.placeholder.com/400x500/0E4A52/FFFFFF?text=Mobile+App+UI" 
+                    <img src="https://ik.imagekit.io/vcvnivu1e/app%20ui.png?updatedAt=1751413385854" 
                          alt="Mobile App UI" 
                          data-title="Mobile App Interface"
                          data-description="Modern mobile app UI design with intuitive user experience.">
@@ -390,7 +390,7 @@
                     </div>
                 </div>
                 <div class="gallery-item" data-category="print">
-                    <img src="https://via.placeholder.com/400x400/216D77/FFFFFF?text=Poster+Design" 
+                    <img src="https://ik.imagekit.io/vcvnivu1e/image.png?updatedAt=1751412847813" 
                          alt="Poster Design" 
                          data-title="Event Poster"
                          data-description="Eye-catching poster design for promotional events.">
