--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                     </div>
                 </div>
                 <div class="gallery-item" data-category="logos">
-                    <img src="https://via.placeholder.com/400x400/1B6B73/FFFFFF?text=Logo+2" 
+                    <img src="https://ik.imagekit.io/vcvnivu1e/Picture2.png?updatedAt=1751413834412" 
                          alt="Creative Logo Design" 
                          data-title="Creative Agency Logo"
                          data-description="Bold and creative logo for a design agency.">
